GitPages link corrected

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <h2>Hosted here </h2>
 <ul>
   <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/RussellRClark/Angular">GitHub Pages</a></h2>
+    <h2><a target="_blank" rel="noopener" href="https://russellrclark.github.io/Angular/">GitHub Pages</a></h2>
   </li>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://github.com/RussellRClark/Angular.git">GitHub Repo</a></h2>
