--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,6 +58,18 @@ Code is deployed on Push to the repository or manually from the development term
 
 </ul>
 
+<h2>Regular VPS</h2>
+Code is deployed on Push to the repository or manually from the development terminal
+<br>Tests are deployed manually from the development terminal
+<ul>
+  <li>
+    <h2><a target="_blank" rel="noopener" href="http://85.159.212.244/pdtemplateanos5">Host: Linode</a></h2>
+    This is a standard VPS (Ubuntu 16.04 LTS with Nginx server) administered by me. It has a default site &amp; one sub-site.
+    <br>  Code is deployed manually via sFTP. For SPA routing base href is set to pdtemplateanos5.
+  </li>
+</ul>
+
+
 <br><h2>Here are the links to the services mentioned above</h2>
 <ul>
   <li>
